# hr-system

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entry.sh  pyproject.toml  pytest.ini  run_tests.py
backend/candidate/: filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/candidate/migrations/: 0001_initial.py
backend/candidate/tests/: __init__.py  test_models.py  test_permissions.py  test_serializers.py  test_views.py
backend/config/: celery.py  settings.py  test_settings.py  urls.py
backend/core/: notification_service.py  tasks.py  validators.py
backend/core/tests/: __init__.py  test_notification_service.py  test_tasks.py  test_validators.py
backend/templates/emails/: registration_confirmation.html  registration_confirmation.txt  status_update.html  status_update.txt
compose/: .env.sample  docker-compose.test.yml  docker-compose.yml
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/nginx/: nginx.conf
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: AdminDashboard.vue  CandidateRegistration.vue
frontend/src/composables/: useForm.js
frontend/src/config/: index.js
frontend/src/services/: api.js  candidateService.js  statusHistoryService.js
frontend/src/stores/: candidateStore.js
frontend/src/validations/: candidateSchemas.js
frontend/src/views/: AdminDashboardView.vue  CandidateRegistrationView.vue  CandidateStatusView.vue  HomeView.vue
