[project]
name = "backend"
version = "0.1.0"
description = "Minimal HR System API for candidate management"
authors = [
    {name = "Mohammad Muhsen", email = "abukhashabehmohammad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "django-filter>=23.0",
    "django-storages>=1.14.0",
    "boto3>=1.26.0",
    "psycopg2-binary>=2.9.0",
    "drf-yasg>=1.21.0",
    "python-decouple>=3.8",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=candidate --cov-report=html --cov-report=term-missing" 

[tool.hatch.build.targets.wheel]
packages = ["candidate", "config"] 

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
