[project]
name = "backend"
version = "0.1.0"
description = "Minimal HR System API for candidate management"
authors = [
    {name = "Mohammad Muhsen", email = "abukhashabehmohammad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "django-filter>=23.0",
    "django-storages>=1.14.0",
    "boto3>=1.26.0",
    "psycopg2-binary>=2.9.0",
    "drf-yasg>=1.21.0",
    "python-decouple>=3.8",
    "Pillow>=10.0.0",
    "celery>=5.3.0",
    "kombu>=5.3.0",
    "amqp>=5.1.0",
    "django-ses>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-factoryboy>=2.5.0",
    "factory-boy>=3.2.0",
    "faker>=19.0.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "coverage>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=candidate --cov=core --cov-report=html --cov-report=term-missing --cov-fail-under=80 -v"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "performance: Performance tests",
    "edge_case: Edge case tests",
    "slow: Slow running tests"
]
testpaths = ["candidate", "core"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["candidate", "core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/test_*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["candidate", "config"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
